# project-x-be

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env-sample  environment.yaml  pyproject.toml  pytest.ini
assistant/: base_prompts.py  llm_context.json  main.py  requirements.txt
deployments/: k8s-deployment-knowledge-extraction-processor.tmpl
scripts/: test_amqp.py
src/: auth_config.py  config.py  server.py  worker.py
src/common/: __init__.py  chat_resource.py  constants.py  context_resource.py  file_resource.py  health_resource.py  subprocess_wrapper.py  todo_resource.py  utils.py
src/common/amqp/: worker_config.py
src/common/amqp/consumer/: base_consumer.py  queue_consumer.py
src/common/amqp/publisher/: queue_publisher.py
src/common/amqp/utils/: queue_utils.py  sanitize.py
src/common/aws/: aws.py
src/common/classes/: json_serializable_abc.py
src/common/classes/asset/: asset.py  concept.py  placeholder_map.py  (+1 more)
src/common/data_models/: bind_models.py  constants.py  models.py  utils.py
src/common/database/: database.py  database_manager.py  pooled_database_manager.py  utils.py
src/common/gs/: gs.py
src/common/logger/: logger.py
src/common/message_history/: message_history.py
src/common/middleware/: db_connection_middleware.py  jwt_middleware.py
src/common/model_utils/: ai_model_utils.py
src/common/quota/: utils.py
src/common/redis/: redis.py  utils.py
src/common/socket/: constants.py  pusher.py  socket_events.py  socket_publisher.py
src/common/vectorstore/: constants.py  vector_store_service.py
(+7 files in other folders)
